[gd_scene load_steps=53 format=3 uid="uid://dal6qywx61j4"]

[ext_resource type="Script" path="res://Scripts/match.gd" id="1_1xabp"]
[ext_resource type="Script" path="res://Scripts/ControlLabel.gd" id="2_nuei4"]
[ext_resource type="Script" path="res://Scripts/FuncReinicio.gd" id="2_rn1kn"]
[ext_resource type="Texture2D" uid="uid://cn82n3jyg47ck" path="res://Assets/graphics/estadiox4.png" id="4_72lj5"]
[ext_resource type="Script" path="res://Scripts/Ball.gd" id="5_k037j"]
[ext_resource type="Texture2D" uid="uid://cji73yx4yuc35" path="res://Assets/graphics/Arc0x4.png" id="5_mugi6"]
[ext_resource type="PhysicsMaterial" uid="uid://bc5gmq4x6b7ao" path="res://PhysicsMaterial/postes.tres" id="5_mxe2e"]
[ext_resource type="PhysicsMaterial" uid="uid://cfi21cs5qm6jx" path="res://PhysicsMaterial/redes.tres" id="6_578ch"]
[ext_resource type="Texture2D" uid="uid://q8jjc5j3grjw" path="res://icon.svg" id="8_twy1i"]
[ext_resource type="Script" path="res://Scripts/EquipoA.gd" id="9_hws5a"]
[ext_resource type="Script" path="res://Scripts/Players.gd" id="9_yqymw"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="10_0uwb3"]
[ext_resource type="Texture2D" uid="uid://8u8n8tn6ktqm" path="res://Assets/graphics/ChapaPlayer.png" id="11_upfwr"]
[ext_resource type="Texture2D" uid="uid://w0lbiymgiig6" path="res://Assets/graphics/ChapaPlayer-export.png" id="12_8xl87"]
[ext_resource type="Texture2D" uid="uid://ctw6boeuc1omg" path="res://Assets/graphics/CHapaColision.png" id="12_mo50q"]
[ext_resource type="Script" path="res://Scripts/PersonalA01.gd" id="12_ohwlb"]
[ext_resource type="Script" path="res://Scripts/PersonalA02.gd" id="14_b8o25"]
[ext_resource type="Script" path="res://Scripts/Decisiones.gd" id="14_u8vcb"]
[ext_resource type="Texture2D" uid="uid://ctm0xanon1kcn" path="res://Assets/graphics/ball2x4.png" id="17_obw50"]
[ext_resource type="Script" path="res://Scripts/Camera2DManager.gd" id="18_mb1ey"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ds67g"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ftk6"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ap057"]
size = Vector2(8, 274)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dswey"]
size = Vector2(130.717, 7.71695)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnjkp"]
size = Vector2(131.328, 7.57655)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmtof"]
size = Vector2(8.90908, 266.286)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqyt4"]
size = Vector2(850, 1900)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggkav"]
size = Vector2(655.086, 1600)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y36wg"]
radius = 1.75934
height = 6.16797

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5mdsq"]
radius = 1.20483
height = 6.62183

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njs7a"]
size = Vector2(3.78387, 81.9874)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5l4xa"]
size = Vector2(16.3251, 3.56358)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76in8"]
size = Vector2(17.2159, 2.67264)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_262m3"]
size = Vector2(4.89996, 81.5172)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_riwsv"]
bounce = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5o7x"]
size = Vector2(60, 3600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o38gs"]
size = Vector2(60, 3600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbppi"]
size = Vector2(5800, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfknh"]
size = Vector2(5800, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_uls8d"]
radius = 14.0

[sub_resource type="Animation" id="Animation_yno8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ballPie:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-35, 0)]
}

[sub_resource type="Animation" id="Animation_i1erh"]
resource_name = "conduccion"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ballPie:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-35, 0), Vector2(-60, 0), Vector2(-35, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12ocg"]
_data = {
"RESET": SubResource("Animation_yno8n"),
"conduccion": SubResource("Animation_i1erh")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yfuhh"]
radius = 60.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tqvx2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r6vsu"]
radius = 4.5

[sub_resource type="CircleShape2D" id="CircleShape2D_1fvwe"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha8dj"]
size = Vector2(1070.14, 597.036)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hc6m5"]
size = Vector2(661.946, 309.543)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iyf2m"]
size = Vector2(653.262, 957.507)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftn2o"]
size = Vector2(654.395, 319.901)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m828a"]
size = Vector2(1075.62, 591.944)

[node name="Match" type="Node2D" groups=["Match"]]
script = ExtResource("1_1xabp")
metadata/_edit_vertical_guides_ = [2104.7, 6424.5, 4265.05, 3185.27, 5344.95, 2766.13, 3514.78, 5765.04, 5012.19]
metadata/_edit_horizontal_guides_ = [991.75, 3792.35, 1592.45, 3190.52, 1910.8, 2870.5]
metadata/_edit_lock_ = true

[node name="FuncReinicio" type="Node2D" parent="."]
script = ExtResource("2_rn1kn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_nuei4")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label1" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label6" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label7" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label8" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label9" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label10" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label11" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label12" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label13" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label14" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="VboxControles" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 131.0
grow_horizontal = 0

[node name="Label1" type="Label" parent="CanvasLayer/Control/VboxControles"]
layout_mode = 2
text = "En Juego: Barra espaciadora"

[node name="Label2" type="Label" parent="CanvasLayer/Control/VboxControles"]
layout_mode = 2
text = "Patear: Q"

[node name="Label3" type="Label" parent="CanvasLayer/Control/VboxControles"]
layout_mode = 2
text = "Pasar: A"

[node name="Label4" type="Label" parent="CanvasLayer/Control/VboxControles"]
layout_mode = 2

[node name="Label5" type="Label" parent="CanvasLayer/Control/VboxControles"]
layout_mode = 2

[node name="Escenario" type="Node2D" parent="."]

[node name="Estadio" type="Sprite2D" parent="Escenario"]
texture_filter = 3
position = Vector2(4264, 2392)
texture = ExtResource("4_72lj5")

[node name="Arco1" type="Node2D" parent="Escenario" groups=["Arco1"]]
position = Vector2(2016, 2390.59)

[node name="Sprite2D" type="Sprite2D" parent="Escenario/Arco1"]
z_index = 4
texture_filter = 3
position = Vector2(-11, 0)
texture = ExtResource("5_mugi6")
flip_h = true

[node name="Postes" type="Node2D" parent="Escenario/Arco1"]

[node name="Palo1" type="StaticBody2D" parent="Escenario/Arco1/Postes"]
position = Vector2(89.75, -132.25)
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("5_mxe2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Postes/Palo1"]
position = Vector2(-12.1638, 0.169434)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ds67g")

[node name="Palo2" type="StaticBody2D" parent="Escenario/Arco1/Postes"]
position = Vector2(93.3381, 135.56)
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("5_mxe2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Postes/Palo2"]
position = Vector2(-16.0779, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2ftk6")

[node name="Larguero" type="StaticBody2D" parent="Escenario/Arco1/Postes"]
position = Vector2(66.8174, 2.67285)
collision_layer = 8
collision_mask = 0
physics_material_override = ExtResource("5_mxe2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Postes/Larguero"]
position = Vector2(-1.29199, -1.08252)
shape = SubResource("RectangleShape2D_ap057")

[node name="Redes" type="Node2D" parent="Escenario/Arco1"]

[node name="Red1" type="StaticBody2D" parent="Escenario/Arco1/Redes"]
position = Vector2(9.32833, -132.476)
collision_layer = 16
collision_mask = 0
physics_material_override = ExtResource("6_578ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Redes/Red1"]
position = Vector2(-14.3986, 0.239746)
shape = SubResource("RectangleShape2D_dswey")

[node name="Red2" type="StaticBody2D" parent="Escenario/Arco1/Redes"]
position = Vector2(56.6846, 90.9197)
collision_layer = 16
collision_mask = 0
physics_material_override = ExtResource("6_578ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Redes/Red2"]
position = Vector2(-63.1183, 44.345)
shape = SubResource("RectangleShape2D_mnjkp")

[node name="Red3" type="StaticBody2D" parent="Escenario/Arco1/Redes"]
collision_layer = 16
collision_mask = 0
physics_material_override = ExtResource("6_578ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Redes/Red3"]
position = Vector2(-67.4502, -1.82324)
shape = SubResource("RectangleShape2D_fmtof")

[node name="Triggers" type="Node2D" parent="Escenario/Arco1"]
visible = false

[node name="AreaDisparo" type="Area2D" parent="Escenario/Arco1/Triggers"]
position = Vector2(88, 0)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Triggers/AreaDisparo"]
position = Vector2(424, -8)
shape = SubResource("RectangleShape2D_eqyt4")

[node name="AreaPenal" type="Area2D" parent="Escenario/Arco1/Triggers"]
position = Vector2(88, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco1/Triggers/AreaPenal"]
position = Vector2(328.457, 0)
shape = SubResource("RectangleShape2D_ggkav")

[node name="Arco2" type="Node2D" parent="Escenario"]
position = Vector2(6512.38, 2389.43)

[node name="Sprite2D" type="Sprite2D" parent="Escenario/Arco2"]
texture_filter = 3
position = Vector2(11, 0)
texture = ExtResource("5_mugi6")

[node name="Postes" type="Node2D" parent="Escenario/Arco2"]

[node name="Palo1" type="StaticBody2D" parent="Escenario/Arco2/Postes"]
position = Vector2(0, -41.2505)
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("5_mxe2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco2/Postes/Palo1"]
position = Vector2(1.73499, -0.397705)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_y36wg")

[node name="Palo2" type="StaticBody2D" parent="Escenario/Arco2/Postes"]
position = Vector2(-0.210327, 43.6215)
collision_layer = 4
collision_mask = 0
physics_material_override = ExtResource("5_mxe2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco2/Postes/Palo2"]
position = Vector2(2.22766, -0.14917)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5mdsq")

[node name="Larguero" type="StaticBody2D" parent="Escenario/Arco2/Postes"]
position = Vector2(3.78406, 0)
collision_layer = 8
collision_mask = 0
physics_material_override = ExtResource("5_mxe2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco2/Postes/Larguero"]
position = Vector2(0.0180664, 1.41498)
shape = SubResource("RectangleShape2D_njs7a")

[node name="Redes" type="Node2D" parent="Escenario/Arco2"]

[node name="Red1" type="StaticBody2D" parent="Escenario/Arco2/Redes"]
position = Vector2(12.2498, -41.8722)
collision_layer = 16
collision_mask = 3
physics_material_override = ExtResource("6_578ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco2/Redes/Red1"]
position = Vector2(1.8374, 0.423248)
shape = SubResource("RectangleShape2D_5l4xa")

[node name="Red2" type="StaticBody2D" parent="Escenario/Arco2/Redes"]
position = Vector2(12.918, 42.9858)
collision_layer = 16
collision_mask = 3
physics_material_override = ExtResource("6_578ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco2/Redes/Red2"]
position = Vector2(1.39209, 0.200562)
shape = SubResource("RectangleShape2D_76in8")

[node name="Red3" type="StaticBody2D" parent="Escenario/Arco2/Redes"]
position = Vector2(22.4951, 0)
collision_layer = 16
collision_mask = 3
physics_material_override = ExtResource("6_578ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/Arco2/Redes/Red3"]
position = Vector2(-1.91541, 1.159)
shape = SubResource("RectangleShape2D_262m3")

[node name="LimEstadio" type="Node2D" parent="Escenario"]
position = Vector2(960, 540)

[node name="Cartel1" type="StaticBody2D" parent="Escenario/LimEstadio"]
position = Vector2(488, 1852)
scale = Vector2(0.205, 1)
collision_layer = 16
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_riwsv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/LimEstadio/Cartel1"]
position = Vector2(0, -0.549622)
shape = SubResource("RectangleShape2D_q5o7x")

[node name="Cartel2" type="StaticBody2D" parent="Escenario/LimEstadio"]
position = Vector2(6104, 1852)
collision_layer = 16
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_riwsv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/LimEstadio/Cartel2"]
position = Vector2(2.26538, 3.16614)
shape = SubResource("RectangleShape2D_o38gs")

[node name="Cartel3" type="StaticBody2D" parent="Escenario/LimEstadio"]
position = Vector2(3320, 68)
collision_layer = 16
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_riwsv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/LimEstadio/Cartel3"]
position = Vector2(3.82111, 0)
shape = SubResource("RectangleShape2D_lbppi")

[node name="Cartel4" type="StaticBody2D" parent="Escenario/LimEstadio"]
position = Vector2(3312, 3604)
collision_layer = 16
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_riwsv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Escenario/LimEstadio/Cartel4"]
position = Vector2(3.69495, 3.57007)
shape = SubResource("RectangleShape2D_kfknh")

[node name="PuntosReinicio" type="Node2D" parent="Escenario"]
position = Vector2(952, 544)

[node name="SaqueMedio" type="Marker2D" parent="Escenario/PuntosReinicio"]
position = Vector2(3321.53, 1843.44)

[node name="Sprite2D" type="Sprite2D" parent="Escenario/PuntosReinicio/SaqueMedio"]
scale = Vector2(0.05, 0.05)
texture = ExtResource("8_twy1i")

[node name="Players" type="Node2D" parent="."]
script = ExtResource("9_yqymw")

[node name="EquipoA" type="Node2D" parent="Players"]
script = ExtResource("9_hws5a")

[node name="Sprite2D" type="Sprite2D" parent="Players/EquipoA"]
visible = false
texture = ExtResource("11_upfwr")

[node name="Posiciones" type="Node2D" parent="Players/EquipoA"]
position = Vector2(990.2, 465.601)

[node name="PlayerA01" type="Node2D" parent="Players/EquipoA/Posiciones"]

[node name="PosOfensiva" type="Marker2D" parent="Players/EquipoA/Posiciones/PlayerA01"]
position = Vector2(2243.33, 1606.34)

[node name="Panel" type="Panel" parent="Players/EquipoA/Posiciones/PlayerA01/PosOfensiva"]
offset_left = -40.5359
offset_top = -23.6088
offset_right = -0.535889
offset_bottom = 16.3912
scale = Vector2(2.3313, 1.28)

[node name="Label" type="Label" parent="Players/EquipoA/Posiciones/PlayerA01/PosOfensiva"]
offset_left = -34.7451
offset_top = -26.727
offset_right = 47.2549
offset_bottom = 25.273
text = "Posición 
Ofensiva 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerA02" type="Node2D" parent="Players/EquipoA/Posiciones"]

[node name="PosOfensiva" type="Marker2D" parent="Players/EquipoA/Posiciones/PlayerA02"]
position = Vector2(2085.72, 2123.35)

[node name="Panel" type="Panel" parent="Players/EquipoA/Posiciones/PlayerA02/PosOfensiva"]
offset_left = -40.5359
offset_top = -23.6088
offset_right = -0.535889
offset_bottom = 16.3912
scale = Vector2(2.3313, 1.28)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Players/EquipoA/Posiciones/PlayerA02/PosOfensiva"]
offset_left = -34.7451
offset_top = -26.727
offset_right = 47.2549
offset_bottom = 25.273
text = "Posición 
Ofensiva 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerA01" type="CharacterBody2D" parent="Players/EquipoA" groups=["Player"]]
position = Vector2(4497.82, 1725.52)
collision_layer = 2
collision_mask = 20
motion_mode = 1
platform_floor_layers = 4294901760
script = ExtResource("10_0uwb3")
accel = 0.03

[node name="Graphics" type="Node2D" parent="Players/EquipoA/PlayerA01"]

[node name="Coll" type="Sprite2D" parent="Players/EquipoA/PlayerA01/Graphics"]
modulate = Color(1, 1, 1, 0.552941)
texture_filter = 3
texture = ExtResource("12_mo50q")

[node name="Player" type="Sprite2D" parent="Players/EquipoA/PlayerA01/Graphics"]
texture_filter = 3
texture = ExtResource("12_8xl87")

[node name="Label" type="Label" parent="Players/EquipoA/PlayerA01/Graphics"]
texture_filter = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.62451
offset_top = -10.7948
offset_right = 36.3756
offset_bottom = 24.2052
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/EquipoA/PlayerA01"]
shape = SubResource("CircleShape2D_uls8d")

[node name="ballPie" type="Marker2D" parent="Players/EquipoA/PlayerA01"]
position = Vector2(-35, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Players/EquipoA/PlayerA01"]
libraries = {
"": SubResource("AnimationLibrary_12ocg")
}

[node name="Decisiones" type="Node2D" parent="Players/EquipoA/PlayerA01"]
position = Vector2(-990.2, -465.601)
script = ExtResource("14_u8vcb")

[node name="Triggers" type="Node2D" parent="Players/EquipoA/PlayerA01"]

[node name="AreaLibertad" type="Area2D" parent="Players/EquipoA/PlayerA01/Triggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/EquipoA/PlayerA01/Triggers/AreaLibertad"]
shape = SubResource("CircleShape2D_yfuhh")

[node name="RayoLibertad" type="RayCast2D" parent="Players/EquipoA/PlayerA01/Triggers"]
scale = Vector2(1, 10)
target_position = Vector2(-300, 0)
collision_mask = 2

[node name="Personal" type="Node2D" parent="Players/EquipoA/PlayerA01"]
script = ExtResource("12_ohwlb")

[node name="PlayerA02" type="CharacterBody2D" parent="Players/EquipoA" groups=["Player"]]
position = Vector2(4589.57, 2822.56)
collision_layer = 2
collision_mask = 20
motion_mode = 1
platform_floor_layers = 4294901760
script = ExtResource("10_0uwb3")
accel = 0.03

[node name="Graphics" type="Node2D" parent="Players/EquipoA/PlayerA02"]

[node name="Coll" type="Sprite2D" parent="Players/EquipoA/PlayerA02/Graphics"]
modulate = Color(1, 1, 1, 0.552941)
texture_filter = 3
texture = ExtResource("12_mo50q")

[node name="Player" type="Sprite2D" parent="Players/EquipoA/PlayerA02/Graphics"]
texture_filter = 3
texture = ExtResource("12_8xl87")

[node name="Label" type="Label" parent="Players/EquipoA/PlayerA02/Graphics"]
texture_filter = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.01367
offset_top = -10.3801
offset_right = 35.9864
offset_bottom = 24.6199
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/EquipoA/PlayerA02"]
shape = SubResource("CircleShape2D_uls8d")

[node name="ballPie" type="Marker2D" parent="Players/EquipoA/PlayerA02"]
position = Vector2(-35, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Players/EquipoA/PlayerA02"]
libraries = {
"": SubResource("AnimationLibrary_12ocg")
}

[node name="Decisiones" type="Node2D" parent="Players/EquipoA/PlayerA02"]
position = Vector2(-990.2, -465.601)
script = ExtResource("14_u8vcb")

[node name="Triggers" type="Node2D" parent="Players/EquipoA/PlayerA02"]

[node name="AreaLibertad" type="Area2D" parent="Players/EquipoA/PlayerA02/Triggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/EquipoA/PlayerA02/Triggers/AreaLibertad"]
shape = SubResource("CircleShape2D_yfuhh")

[node name="RayoLibertad" type="RayCast2D" parent="Players/EquipoA/PlayerA02/Triggers"]
scale = Vector2(1, 10)
target_position = Vector2(-250, 0)

[node name="Personal" type="Node2D" parent="Players/EquipoA/PlayerA02"]
script = ExtResource("14_b8o25")

[node name="PuntosReinicio" type="Node2D" parent="Players/EquipoA"]

[node name="SaqueMedio" type="Marker2D" parent="Players/EquipoA/PuntosReinicio"]
position = Vector2(4423.74, 2211.48)

[node name="Ball" type="RigidBody2D" parent="." groups=["Ball"]]
texture_filter = 3
position = Vector2(4274.1, 2387.89)
collision_mask = 22
physics_material_override = SubResource("PhysicsMaterial_tqvx2")
continuous_cd = 2
max_contacts_reported = 30
contact_monitor = true
linear_damp = 0.5
script = ExtResource("5_k037j")
weightLerp = 0.1

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture_filter = 3
texture = ExtResource("17_obw50")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_r6vsu")

[node name="BallArea" type="Area2D" parent="Ball"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/BallArea"]
shape = SubResource("CircleShape2D_1fvwe")

[node name="Camera2D" type="Camera2D" parent="Ball"]
limit_left = 0
limit_top = 0
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 2.0
script = ExtResource("18_mb1ey")

[node name="ZonasTacticas" type="Node2D" parent="."]

[node name="Zona1" type="Area2D" parent="ZonasTacticas"]
position = Vector2(2432.46, 1296.97)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonasTacticas/Zona1"]
position = Vector2(214.422, -2.67737)
shape = SubResource("RectangleShape2D_ha8dj")

[node name="Zona2" type="Area2D" parent="ZonasTacticas"]
position = Vector2(2469.28, 1775.46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonasTacticas/Zona2"]
position = Vector2(-33.405, -20.392)
shape = SubResource("RectangleShape2D_hc6m5")

[node name="Zona3" type="Area2D" parent="ZonasTacticas"]
position = Vector2(2444.63, 2387.61)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonasTacticas/Zona3"]
position = Vector2(-7.67065, 4.98877)
shape = SubResource("RectangleShape2D_iyf2m")

[node name="Zona4" type="Area2D" parent="ZonasTacticas"]
position = Vector2(2415.58, 3034.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonasTacticas/Zona4"]
position = Vector2(20.6453, -4.11572)
shape = SubResource("RectangleShape2D_ftn2o")

[node name="Zona5" type="Area2D" parent="ZonasTacticas"]
position = Vector2(2420.7, 3496.95)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonasTacticas/Zona5"]
position = Vector2(226.439, -5.83862)
shape = SubResource("RectangleShape2D_m828a")

[node name="Zona6" type="Area2D" parent="ZonasTacticas"]

[node name="Zona7" type="Area2D" parent="ZonasTacticas"]

[node name="Zona8" type="Area2D" parent="ZonasTacticas"]

[node name="Zona9" type="Area2D" parent="ZonasTacticas"]

[node name="Zona10" type="Area2D" parent="ZonasTacticas"]

[node name="Zona11" type="Area2D" parent="ZonasTacticas"]

[node name="Zona12" type="Area2D" parent="ZonasTacticas"]

[node name="Zona13" type="Area2D" parent="ZonasTacticas"]

[node name="Zona14" type="Area2D" parent="ZonasTacticas"]

[node name="Zona15" type="Area2D" parent="ZonasTacticas"]

[node name="Zona16" type="Area2D" parent="ZonasTacticas"]

[node name="Zona17" type="Area2D" parent="ZonasTacticas"]

[node name="Zona18" type="Area2D" parent="ZonasTacticas"]

[node name="Zona19" type="Area2D" parent="ZonasTacticas"]

[node name="Zona20" type="Area2D" parent="ZonasTacticas"]

[node name="Zona21" type="Area2D" parent="ZonasTacticas"]

[node name="Zona22" type="Area2D" parent="ZonasTacticas"]

[node name="Zona23" type="Area2D" parent="ZonasTacticas"]

[node name="Zona24" type="Area2D" parent="ZonasTacticas"]

[node name="Zona25" type="Area2D" parent="ZonasTacticas"]

[node name="Zona26" type="Area2D" parent="ZonasTacticas"]

[connection signal="body_entered" from="Escenario/Arco1/Triggers/AreaDisparo" to="Players/EquipoA" method="_on_area_disparo_body_entered"]
[connection signal="body_exited" from="Escenario/Arco1/Triggers/AreaDisparo" to="Players/EquipoA" method="_on_area_disparo_body_exited"]
[connection signal="body_entered" from="Ball/BallArea" to="Ball" method="_on_ball_area_body_entered"]
